feat: Upgrade Spring Boot 1.5.2 to 3.4.4 and modernize all dependencies (#30)
* Upgrade Spring Boot 1.5.2 to 3.4.4 and modernize all dependencies

- Spring Boot 1.5.2.RELEASE -> 3.4.4 (Spring Framework 4 -> 6)
- Telegrambots 6.5.0 -> 6.9.7.1 (handle MaybeInaccessibleMessage API change)
- Migrate javax.* to jakarta.* (PostConstruct, Nonnull, Servlet)
- Replace WebSecurityConfigurerAdapter with SecurityFilterChain
- Migrate Apache HttpClient 4 to 5 (BotConfiguration, Request, RequestFactory)
- Update Spring Data repositories for CrudRepository 3.x API (Optional returns, saveAll)
- Migrate all 19 test files from JUnit 4 to JUnit 5
- Remove obsolete deps: spring-security-oauth2, jersey-bundle, commons-lang 2.x
- Update jsoup, org.json, jsr305, xsoup, Groovy 4.0.24
- Let Spring Boot BOM manage versions for commons-lang3, gson, json-path, etc.
- Fix pre-existing test bugs in AbstractTextAndNumberOperationsTest

All 154 tests pass.

Made-with: Cursor

* Update JDK home path in toolchains.xml

* Enhance Portainer deployment workflow

- Added support for tagging Docker images based on GitHub references, including branches and tags.
- Implemented GitHub Container Registry login step for secure image pushing.
- Updated image build step to push images with dynamically determined tags.
- Improved error handling and context management in the deployment process.

This update streamlines the deployment process and ensures proper tagging for better version control.